--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
 
     <link rel="icon" href="/favicon.ico" />
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-    <title>Vite App</title>
+    <title>Music Player</title>
   </head>
   <body>
     <div id="app"></div>
